@@ -93,12 +93,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
      2.4.x patch: trunk patch works
      +1: rjung, humbedooh, trawick (needs CHANGES entry)
 
-   * mod_auth_digest: respect DefaultRuntimeDir for its
-                      unconfigurable shared memory file
-     trunk patch: http://svn.apache.org/viewvc?rev=1371387&view=rev
-     2.4.x patch: trunk patch works
-     +1: trawick, rjung, jim
-
    * ab fixes:
      o When -B is specified, search for a host address in the same
        family as the specified outbound interface.
